bright: fix search & compose buttons contrast in tablet ui

--- a/app/javascript/styles/chitter-bright.scss
+++ b/app/javascript/styles/chitter-bright.scss
@@ -452,3 +452,9 @@ a.status-card:hover, a.status-card.compact:hover {
 a.column-link--transparent {
   color: $ui-primary-color;
 }
+
+.button.button-secondary {
+  color: $ui-secondary-color;
+  border-color: $ui-secondary-color;
+
+}
